2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (RedirectedExecutable._InitializeChild): Fix
	indentation.

2003-08-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (TimeoutExecutable.__init__): Document -2 value
	for timeout.
	(TimeoutExecutable._InitializeChild): Create the monitor pid in
	the -2 case as well.
	(TimeoutExectuable.Run): Kill the entire process group, not just
	the monitor pid.
	(TimeoutExectuable.__UseSeparateProcessGroupForChild): New
	method.
	(Filter.__init__): Adjust documentation of timeout parameter.
	* qm/test/classes/command.py (ExecTestBase.RunProgram): Pass -2 to
	Filter when no timeout is specified.

2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (Executable._MakeCloseOnExec): New function.
	(Executable.Run): Use it.
	(RedirectedExecutable._CreatePipe): Use it; document that fds
	will be closed on exec.
	(RedirectedExecutable._InitializeChild): Close all pipe fd's.

2003-08-13  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (Executable): Typo in docstring.

2003-08-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/text_result_stream.py
	(TextResultStream.WriteResult): Don't save results when using the
	"stats" format.

2003-08-11  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/command.py (ExecTestBase.RunProgram): Use the
	exit code returned by Filter.Run on Windows.

2003-08-11  Mark Mitchell  <mark@codesourcery.com>

	* qm/platform_unix.py (SignalException.__init__): Tweak message
	formatting.
	(_initialize): Tidy.
	* qm/test/execution_engine.py (ExecutionEngine._RunTests): Honor
	termination requests.
	* qm/test/target.py: Import qm.platform and signal.
	(Target.RunTest): Honor temination requests in the form of
	SIGTERM.

2003-08-11  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/classes/command.py (ExecTestBase.MakeEnvironment):
	Replace "." with "__" when turning context keys into environment